src/objects/Super_Ball_Pregunta__c.object
<CustomObject>
    <fields>
        <fullName>Dependencia_No__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dependencia No</label>
        <referenceTo>Super_Ball_Pregunta__c</referenceTo>
        <relationshipLabel>Super Ball - Preguntas (Dependencia No)</relationshipLabel>
        <relationshipName>Super_Ball_Preguntas1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dependencia_Si__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dependencia Si</label>
        <referenceTo>Super_Ball_Pregunta__c</referenceTo>
        <relationshipLabel>Super Ball - Preguntas</relationshipLabel>
        <relationshipName>Super_Ball_Preguntas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opciones_picklist__c</fullName>
        <label>Opciones picklist</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Posicion__c</fullName>
        <label>Posicion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pregunta__c</fullName>
        <label>Pregunta</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Super_Ball_Nodo__c</fullName>
        <label>Super Ball - Nodo</label>
        <referenceTo>Super_Ball_Nodo__c</referenceTo>
        <relationshipLabel>Super Ball - Preguntas</relationshipLabel>
        <relationshipName>Super_Ball_Preguntas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Tipo_de_pregunta__c</fullName>
        <label>Tipo de pregunta</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si/no</fullName>
                </value>
                <value>
                    <fullName>Libre</fullName>
                </value>
                <value>
                    <fullName>Lista</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>esHija__c</fullName>
        <defaultValue>false</defaultValue>
        <label>esHija</label>
        <type>Checkbox</type>
    </fields>
    <label>Super Ball - Pregunta</label>
    <nameField>
        <label>Nombre de Nodo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Super Ball - Preguntas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>